@@ -9,4 +9,4 @@ set APP_LIB=%APP_LIB%;%MAVEN_LIB%\org\slf4j\slf4j-simple\1.7.5\slf4j-simple-1.7.
 set APP_LIB=%APP_LIB%;%MAVEN_LIB%\org\slf4j\slf4j-api\1.7.5\slf4j-api-1.7.5.jar
 cls
 
-java -cp %APP_HOME%;%APP_LIB% algotrader.oms.FIXClient
+java -cp %APP_HOME%;%APP_LIB% -server -XX:+UseParNewGC -XX:+UseConcMarkSweepGC algotrader.oms.FIXClient
